kustomize/overlays/scots-lab/apps/argocd/dashboard-patch.yaml
apiVersion: v1
kind: Service
metadata:
  name: argo-cd-argocd-server
  namespace: argocd
  annotations:
    omni-kube-service-exposer.sidero.scots-lab/label: Argo Dashboard
    omni-kube-service-exposer.sidero.scots-lab/port: "50081"
    omni-kube-service-exposer.sidero.scots-lab/prefix: argocd
    omni-kube-service-exposer.sidero.scots-lab/icon: H4sICLLnVmgAA2FyZ29jZC5zdmcArVlbb2O5Df4rgosCm4ej6C6dYjLA7jxsHjpAgaL77pz41nXiIHaS2fn1/UjqXBw7yRQYBNaVIj9RJEWdfNo/r9S3u+39/mq2Phwe/nF5+fLyol+83j2uLp0x5hIUM/WyuT2sr2YYmKn1YrNaH2rnebN4+W337WpmlFHWFfrNPn+6XSz3nz89zA9rtbm9mt0unjfd7v7Xx9Wuu8UqDH3FgjWIn/G7Nt9nl58/XcoqKbvt5uFfZ9fbWeVMXIJTwa5DeI72Orjvd+DKrPrl7zFyYPS0X6j142J5NfvbK5A/ysX/FC5hsqm7EnVqIzamrffbxukYVSza+XIdgi4l05h1sZHBHxYS/w+od/P9n6ccEjis1HKzPSwer2ZPj9tfjrl0F++KoJXbZvcw7zaHv65m2kXLYlf4kcC3xOa [...]
