kustomize/overlays/scots-lab/apps/argocd/httproute.yaml
apiVersion: gateway.networking.k8s.io/v1
kind: HTTPRoute
metadata:
  name: argocd-server
  namespace: argocd
  annotations:
    gethomepage.dev/enabled: 'true'
    gethomepage.dev/name: ArgoCD
    gethomepage.dev/group: Infrastructure
    gethomepage.dev/description: GitOps Engine
    gethomepage.dev/icon: argocd.png
    gethomepage.dev/href: https://argocd-omni.proxy-us.srbii.com/
    gethomepage.dev/weight: '10'
spec:
  parentRefs:
  - name: kgateway-http
    namespace: kgateway-system
  hostnames:
  - argocd.srbii.com
  rules:
  - matches:
    - path:
        type: PathPrefix
        value: /
    backendRefs:
    - name: argo-cd-argocd-server
      port: 80
